    * jQuery Chili code highlighter http://code.google.com/p/jquery-chili-js/ 
    * SWFUpload v2.2.0.1: http://swfupload.org/
    * SWFObject v2.2: http://code.google.com/p/swfobject/

zlib/libpng License:
    * fastXmlPull is based on XML for Script's Fast Pull Parser v3.1
      (see: http://wiki.fluidproject.org/display/fluid/Licensing+for+fastXmlPull.js)
  
BSD License:
    * fluid.reset.css is based on YUI's CSS reset styling v2.5.2
      see: http://developer.yahoo.com/yui/reset/
    * Sample markup and stylesheets from uPortal v2.6 (http://www.uportal.org/)

ECL 2.0:
    * Sample markup and stylesheets from Sakai v2.5 (http://sakaiproject.org)

Other licenses:
    * Douglas Crockford's JSON.js (from 2007-11-06): http://www.json.org/ (Public Domain)
    

Documentation
=============

The Fluid Project uses a wiki for documentation and project collaboration: http://wiki.fluidproject.org
The main Infusion documentation can be found at:

    http://wiki.fluidproject.org/display/fluid/Infusion+Documentation

The documentation for Infusion consists of a number of information pages stored in the Fluid Wiki.
The pages include tutorials, API descriptions, testing procedures, and data-gathering approaches. To make the 
manual pages easy to navigate, we have added the following guides:

    * The above-mentioned landing page, which links to all of our documentation.
    * A link to the documentation appears at the top of the left-side wiki navigation
      bar with the name "Infusion Documentation".

NOTE: Starting with Infusion 1.3, we are beginning to migrate our documentation to a new home.
Some of our Sneak Peek functionality is now documented at
    http://wiki.fluidproject.org/display/docs/Infusion+Documentation+Home


Supported Browsers
==================

The following browsers are fully supported and were actively tested against for Infusion 1.4-SNAPSHOT:

Mac OS X 10.6:
    * Safari 5
    * Firefox 3.6
    * Firefox 4
   
Windows XP:
    * Firefox 3.6