@@ -368,9 +368,6 @@ input.fl-icon {padding-left:16px;}
 
 /* Hiding Content. The following styles are taken from http://html5boilerplate.com */
 
-/* Hide text for image replacement */
-.fl-hidden-ir { display: block; text-indent: -999em; overflow: hidden; background-repeat: no-repeat; text-align: left; direction: ltr; }
-
 /* Hide for both screenreaders and browsers */
 .fl-hidden { display: none; visibility: hidden; }
 
@@ -378,10 +375,14 @@ input.fl-icon {padding-left:16px;}
 .fl-hidden-invisible { visibility: hidden; }
 
 /* Hide for browsers but available for screenreaders */
-.fl-hidden-visual { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
+.fl-hidden-accessible { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
 /* Add focus for keyboard users */
-.fl-hidden-visual.fl-focus:active,
-.fl-hidden-visual.fl-focus:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
+.fl-hidden-accessible.fl-focus:active,
+.fl-hidden-accessible.fl-focus:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
+
+/* Hide text for image replacement */
+.fl-hidden-replace { display: block; text-indent: -999em; overflow: hidden; background-repeat: no-repeat; text-align: left; direction: ltr; }
+
 
 /* DEPRECATED */
 .fl-offScreen-hidden {position:absolute; left:-10000px; top:auto; width:1px; height:1px; overflow:hidden;}
